Update TestProcess.java